# symbolic_calculus

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
src/: constraints.h  formula.h  main.cpp  reference.h  substitution.h  symbol.h  symbol_binder.h  symbol_id.h  symbolic_expression.h  traits.h  utils.h
